# bevy_observed_utility

./: .gitignore  Cargo.toml  README.md
benches/: score.rs
examples/: thirst.rs
src/: acting.rs  ecs.rs  event.rs  lib.rs  picking.rs  scoring.rs
src/picking/: first_to_score.rs  highest.rs  random.rs
src/scoring/: all_or_nothing.rs  evaluator.rs  fixed.rs  measured.rs  product.rs  random.rs  sum.rs  winning.rs
tests/: integration_tests.rs
