[package]
name = "bevy_observed_utility"
version = "0.5.0"
edition = "2024"
authors = ["Christian Hughes"]
description = "Ergonomic and Correct Utility AI for Bevy Engine"
categories = ["game-development"]
keywords = ["bevy", "utility-ai", "ai", "ecs", "observers"]
repository = "https://github.com/ItsDoot/bevy_observed_utility"
homepage = "https://github.com/ItsDoot/bevy_observed_utility"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = []

[dependencies]
bevy = { version = "0.18.0", default-features = false }
hashbrown = "0.16.1"
rand = { version = "0.10.0", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.2"
rand = { version = "0.10", features = ["std_rng"] }

[[bench]]
name = "score"
harness = false
